--- a/views/index.html
+++ b/views/index.html
@@ -3,46 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="./javascript/libs/jquery/dist/jquery.js"></script>
+    <script src="./javascript/libs/underscore/underscore.js"></script>
+    <script src="./javascript/libs/backbone/backbone.js"></script>
+
 </head>
-<style>
-    .btn {
-        margin-top: 10px;
-    }
 
-
-
-
-</style>
 <body>
 
-<a href="/man" class="btn">man Router</a><br/>
-<a href="/women" class="btn">women Router</a><br/>
-<a href="/brand" class="btn">brand Router</a><br/>
-
-<div>
-
-    <form action="/brand" method="post">
-        <header>form of create brand</header>
-        <label for="_id">id:      </label>
-        <input id="_id" name="_id" type="text"><br/>
-
-        <label for="name">name:    </label>
-        <input id="name" name="name" type="text"><br/>
-
-        <label for="country">country: </label>
-        <input id="country" name="country" type="text"><br/>
-        <button type="submit">submit</button>
-    </form>
-
-
-
-
-</div>
-
-
-
-
-
-
+    <a href="/login">login page </a>
+<script src="./app.js"></script>
 </body>
 </html>
