--- a/views/index.html
+++ b/views/index.html
@@ -8,10 +8,14 @@
     <script src="./javascript/libs/backbone/backbone.js"></script>
 
 </head>
-
+<form action="/upload" method="post" enctype="multipart/form-data">
+    <input type="file" name="upload" multiple="multiple"><br/>
+    <button type="submit">send</button>
+</form>
 <body>
 
     <a href="/login">login page </a>
-<script src="./app.js"></script>
+<script src="./javascript/models/user.js"></script>
+<script src="./javascript/collections/user.js"></script>
 </body>
 </html>
