--- a/views/home.html
+++ b/views/home.html
@@ -4,97 +4,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>EasyShopping</title>
-
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css" >
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css">
+    <script src="js/libs/jquery/dist/jquery.min.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <style>
-        .bgPicture {
-            background: url("../images/logo2.jpg") no-repeat;
-            -moz-background-size: 100%; /* Firefox 3.6+ */
-            -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
-            -o-background-size: 100%; /* Opera 9.6+ */
-            background-size: 100%; /* Современные браузеры */
-        }
-        .login {
-            color: darkslategrey;
-        }
-
-        #myNavbar {
-            background-color: #A9A9A9;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/frame.css">
 </head>
-<body class="bgPicture">
+<body>
 
-
-<nav  class="navbar navbar-default">
-    <div id="myNavbar" class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Royal Perfume</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="#">Brands <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">men</a></li>
-                <li><a href="#">women</a></li>
-                <li><a href="#">collection</a></li>
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                <ul class="nav navbar-nav">
-                    <li><a href="/login"><b class="login">log in</b> <span class="sr-only">(current)</span></a></li>
-                    <li><a href="/logout"><b class="login">logOut</b> <span class="sr-only">(current)</span></a></li>
-                </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Go</button>
-                </form>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-<div id="logo"></div>
+<!--<div id="headerContainer"></div>-->
+<!--<div id="container">-->
+    <!--<div id="brands"></div>-->
+    <!--<div id="brandWithProducts"></div>-->
+<!--</div>-->
+<!--<div id="footerContainer"></div>-->
 
 
 
 
+<div id="admin" class="container-fluid"></div>
 
 
+<script data-main="js/main" src="/js/libs/requirejs/require.js"></script>
 
-
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-
-<!-- Include all compiled plugins (below), or include individual files as needed -->
 </body>
-<script src="../javascripts/animation.js"></script>
-
 </html>
