--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,11 @@
 <body>
 
     <a href="/login">login page </a>
-<script src="./javascript/models/user.js"></script>
-<script src="./javascript/collections/user.js"></script>
+    <script data-main="javascript/main" src="/javascript/libs/requirejs/require.js"></script>
+
+
+    <div id="container">
+        <button type="button" id="getUsers" class="getUsers">get Users</button>
+    </div>
 </body>
 </html>
