adminka. show all products without remove and delete them

--- a/public/templates/admin/menuTemplate.html
+++ b/public/templates/admin/menuTemplate.html
@@ -17,7 +17,7 @@
             Product <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a id='newProduct' href="#">new product</a></li>
+            <li><a id='createProduct' href="#admin/createProduct">new product</a></li>
             <li><a id='allProducts' href="#">all products</a></li>
             <li><a id='findProduct' href="#">find product by</a></li>
         </ul>
