--- a/public/templates/admin/product/allProductTemplate.html
+++ b/public/templates/admin/product/allProductTemplate.html
@@ -1,3 +1,4 @@
+<h2 id="headerFormProduct" class="headerForm">all products</h2>
 <div class="col-md-2">
     <span>
         Views on page:
@@ -10,6 +11,33 @@
         </select>
     </span>
 </div>
+
+<div class="col-md-2">
+    <span>
+        Sorting by:
+    </span>
+    <span>
+        <select name="sortBy" id="sortBy" class="form-control" aria-describedby="sizing-addon2">
+            <option value="price">price</option>
+            <option value="name">name</option>
+            <option value="launchDate">launch date</option>
+        </select>
+    </span>
+</div>
+
+<div class="col-md-2">
+    <span>
+        Kind of sort:
+    </span>
+    <span>
+       <select name="kindSort" id="kindSort" class="form-control" aria-describedby="sizing-addon2">
+           <option value="+1">from lower to higher</option>
+           <option value="-1">from higher to lower</option>
+       </select>
+    </span>
+</div>
+
+
 
 <div id='pagination' lass="col-md-8">
     <ul class="pagination">
@@ -59,7 +87,9 @@
     <%}%>
     <%})%>
 </table>
-
+<td>
+    <button class="btn btn-danger">delete item(s)</button>
+</td>
 
 <style>
     .tableStyle {
@@ -79,13 +109,13 @@
         width: 40px;
     }
 
-    #category {
-        width: 100px;
-        margin-top: 20px;
-    }
-
     #pagination {
         float: right;
+    }
+    #headerFormProduct{
+        font-family: Georgia, Serif;
+        color: cornflowerblue;
+        text-align: center;
     }
 
 </style>
