--- a/public/templates/admin/menuTemplate.html
+++ b/public/templates/admin/menuTemplate.html
@@ -7,7 +7,6 @@
         <ul class="dropdown-menu">
             <li><a id='newUser' href="#">new user</a></li>
             <li><a id='allUsers' href="#">all users</a></li>
-            <li><a id='findUser' href="#">find user by</a></li>
         </ul>
     </li>
 
@@ -19,7 +18,6 @@
         <ul class="dropdown-menu">
             <li><a id='createProduct' href="#admin/createProduct">new product</a></li>
             <li><a id='allProducts' href="#">all products</a></li>
-            <li><a id='findProduct' href="#">find product by</a></li>
         </ul>
     </li>
 
@@ -29,9 +27,8 @@
             Brand <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a id="newBrand" href="#">new brand</a></li>
+            <li><a id="createBrand" href="#">new brand</a></li>
             <li><a id="allBrands" href="#">all brands</a></li>
-            <li><a id="findBrand" href="#">find brand by</a></li>
         </ul>
     </li>
 
@@ -43,7 +40,6 @@
         <ul class="dropdown-menu">
             <li><a id="newComment" href="#">new comment</a></li>
             <li><a id="allComments" href="#">all comments</a></li>
-            <li><a id="findComment" href="#">find comment by</a></li>
         </ul>
     </li>
 
@@ -55,7 +51,6 @@
         <ul class="dropdown-menu">
             <li><a id="newOrder" href="#">new order</a></li>
             <li><a id="allOrders" href="#">all orders</a></li>
-            <li><a id="findOrder" href="#">find order by</a></li>
         </ul>
     </li>
 </ul>
