--- a/public/templates/admin/menuTemplate.html
+++ b/public/templates/admin/menuTemplate.html
@@ -5,7 +5,7 @@
             User <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-            <li><a id='newUser' href="#">new user</a></li>
+            <li><a id='createUser' href="#">new user</a></li>
             <li><a id='allUsers' href="#">all users</a></li>
         </ul>
     </li>
