--- a/public/templates/admin/user/allUserTemplate.html
+++ b/public/templates/admin/user/allUserTemplate.html
@@ -81,7 +81,7 @@
         <td><h5><%= user.isAdmin %></h5></td>
         <td><h5><%= user.isBan %></h5></td>
         <td>
-            <button data-product-id='<%=user._id%>' class="btn btn-success editBtn">edit</button>
+            <button data-user-id='<%=user._id%>' class="btn btn-success editBtn">edit</button>
         </td>
     </tr>
     <%}%>
