shop. sorting, pagination in brands

--- a/views/home.html
+++ b/views/home.html
@@ -25,7 +25,7 @@
 
 
 
-<div id="admin" class="container-fluid"></div>
+<div id="mainContainer" class="container-fluid"></div>
 
 
 <script data-main="js/main" src="/js/libs/requirejs/require.js"></script>
