shop. sorting, all products without brand label

--- a/public/templates/shop/brand/AllBrandsTemplate.html
+++ b/public/templates/shop/brand/AllBrandsTemplate.html
@@ -63,9 +63,9 @@
     <% _.forEach(collection, function(brand){%>
     <div class="col-sm-4" id="sss">
         <div>
-            <a href="" class='photo' data-attr="<%=brand._id%>" class="brandPicture"><img width="250px" height='250px'
-                                                                            src="<%= brand.pathToPhoto %>"
-                                                                            class="textWrapRight"></a>
+            <a href="" class='photo'  data-attr="<%=brand._id%>" class="brandPicture"><img width="250px" height='250px'
+                                                                            src="<%= brand.pathToPhoto %>"></a>
+
         </div>
         <div class="info">
             <h5><b><%= brand.brandName %></b></h5>
