shop. sort, pagination for products with brand

--- a/public/templates/shop/brand/brand.html
+++ b/public/templates/shop/brand/brand.html
@@ -3,9 +3,9 @@
     <div class="divchik">
         <img data-attr="<%=brand._id%>" src="<%= brand.pathToPhoto %>" width="300" height="300" class="brandPicture"/>
     </div>
-    <b>"<%=brand.brandName%>"</b>
-
-    <p>"<%=brand.description%>"</p>
+    <b><%=brand.brandName%></b>
+    <p><b>description: </b></p>
+    <p><%=brand.description%></p>
     <hr>
     <%})%>
 </div>
