--- a/public/templates/shop/brand/AllBrandsTemplate.html
+++ b/public/templates/shop/brand/AllBrandsTemplate.html
@@ -45,7 +45,7 @@
                 </a>
             </li>
 
-            <li><a href="#" id="currentPage"><%=page%></a></li>
+            <li><a id="currentPage"><%=page%></a></li>
 
             <li>
                 <a href="#" id='nextPage' aria-label="Next">
