--- a/public/templates/shop/mainShopTemplate.html
+++ b/public/templates/shop/mainShopTemplate.html
@@ -1,10 +1,8 @@
 <div id="headerShop"></div>
 <div class="row">
-    <div id="categories" class="col-md-2">
-    </div>
-    <div id="content" class="col-md-10">
-    </div>
+    <div id="container"></div>
 </div>
+<div id="footer"></div>
 
 <style>
     #headerShop{
