--- a/public/templates/admin/product/updateProductTemplate.html
+++ b/public/templates/admin/product/updateProductTemplate.html
@@ -1,8 +1,8 @@
 <h2 id="headerFormProduct" class="headerForm">update product</h2>
 <form id="createProductForm" class="createProductForm" role="menu" action="/product" method="post">
 
-    <div class="input-group itemDiv photoDiv" height="150" width="150">
-        <img src="" id="photo"  class="textWrapRight"><br/>
+    <div class="input-group itemDiv photoDiv" >
+        <img src="" height="150" width="150" id="photo"  class="textWrapRight"><br/>
         <button id="changePhoto">changePhoto</button>
     </div>
 
