--- a/public/templates/shop/mainShopTemplate.html
+++ b/public/templates/shop/mainShopTemplate.html
@@ -1,12 +1,8 @@
 <div id="headerShop"></div>
+<div id="headerMenu" class="row"></div>
+<div id="searchInfo" class="row"></div>
+<hr class="line style-two">
 <div class="row">
     <div id="container"></div>
 </div>
 <div id="footer"></div>
-
-<style>
-    #headerShop{
-        background-color: lightgray;
-        float: top;
-    }
-</style>
