--- a/public/templates/auth/register.html
+++ b/public/templates/auth/register.html
@@ -1,61 +1,51 @@
-<div class="centered">
-    <h1>Registration Page</h1>
-    <form class="form-horizontal">
-        <div class="form-group">
-            <label for="login" class="col-sm-2 control-label">Login</label>
-            <div class="col-sm-10">
+<div class="row">
+    <h2 class="row col-sm-offset-5 col-md-4 loginLabel">Registration</h2>
+    <form class="form-horizontal col-sm-offset-4 col-md-4">
+        <div class="form-group row">
+            <h5 class="col-sm-4">Login</h5>
+            <div class="col-sm-8">
                 <input type="text" id="loginInput" name="login" class="form-control" placeholder="Login">
             </div>
         </div>
-        <div class="form-group">
-            <label for="password" class="col-sm-2 control-label">Password</label>
-            <div class="col-sm-10">
+        <div class="form-group row">
+            <h5  class="col-sm-4">Password</h5>
+            <div class="col-sm-8">
                 <input type="password" name="password" class="form-control" id="password" placeholder="Password">
             </div>
         </div>
-        <div class="form-group">
-            <label for="firstName" class="col-sm-2 control-label">First name</label>
-            <div class="col-sm-10">
+        <div class="form-group row">
+            <h5  class="col-sm-4">First name</h5>
+            <div class="col-sm-8">
                 <input type="text" name="firstName" class="form-control" id="firstName" placeholder="First name">
             </div>
         </div>
-        <div class="form-group">
-            <label for="lastName" class="col-sm-2 control-label">Last name</label>
-            <div class="col-sm-10">
+        <div class="form-group row">
+            <h5 class="col-sm-4">Last name</h5>
+            <div class="col-sm-8">
                 <input type="text" name="lastName" class="form-control" id="lastName" placeholder="Last name">
             </div>
         </div>
-        <div class="form-group">
-            <label for="age" class="col-sm-2 control-label">age</label>
-            <div class="col-sm-10">
+        <div class="form-group row">
+            <h5 class="col-sm-4">age</h5>
+            <div class="col-sm-8">
                 <input type="text" name="age" class="form-control" id="age" placeholder="age">
             </div>
         </div>
-        <div class="form-group">
-            <label for="phoneNumber" class="col-sm-2 control-label">Phone Number</label>
-            <div class="col-sm-10">
+        <div class="form-group row">
+            <h5 class="col-sm-4">Phone Number</h5>
+            <div class="col-sm-8">
                 <input type="text" name="phoneNumber" class="form-control" id="phoneNumber" placeholder="Phone Number">
             </div>
         </div>
-        <div class="form-group">
-            <label for="email" class="col-sm-2 control-label">email</label>
-            <div class="col-sm-10">
+        <div class="form-group row">
+            <h5 class="col-sm-4">email</h5>
+            <div class="col-sm-8">
                 <input type="email" name="email" class="form-control" id="email" placeholder="email">
             </div>
         </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> Remember me
-                    </label>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="button" id='registerBtn' class="btn btn-primary">Sign in</button>
-                <a id='register' class="btn btn-success registerBtn">register</a>
+        <div class="form-group row">
+            <div class="col-sm-offset-3 col-sm-7">
+                <button type="button" id="register" class="btn col-sm-12">REGISTER</button>
             </div>
         </div>
     </form>
@@ -65,20 +55,4 @@
 
 <style>
 
-    .centered{
-        margin-left: auto;
-        margin-right: auto;
-        width: 400px;
-        padding-top: 50px;
-    }
-    .registerBtn{
-        float: right;
-        width: 150px;
-    }
-    label{
-        margin-left : -50px;
-    }
-    .registerBtn{
-        margin-right : 50px;
-    }
 </style>
