--- a/public/templates/shop/headerTemplate.html
+++ b/public/templates/shop/headerTemplate.html
@@ -1,35 +1,31 @@
-<nav class="navbar navbar-default">
-    <div id="myNavbar" class="container-fluid navbar-fixed-top">
+<div class="navbar navbar-default navbar-fixed-top">
+    <div id="myNavbar">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    data-target="#navLinks" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Royal Perfume</a>
         </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="navLinks">
             <ul class="nav navbar-nav">
-                <li><a id="getBrands" href="#">Brands <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">collection</a></li>
-            </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                <ul class="nav navbar-nav">
-                    <li><a id='login' href="/login"><b class="login">log in</b> <span class="sr-only">(current)</span></a></li>
-                </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Go</button>
-                </form>
+                <li><a id="getBrands" href="#">Brands</a></li>
+                <li><h6 style="color: white">&#9711</h6></li>
+                <li><a id="getBestSellers" href="#">best sellers</a></li>
+                <li><h6 style="color: white">&#9711</h6></li>
+                <li><a id="getNovelty" href="#">novelty</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+    </div>
+</div><!-- /.container-fluid -->
+
+
+
+
+
+
+
