--- a/views/home.html
+++ b/views/home.html
@@ -12,21 +12,11 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <link rel="stylesheet" href="../css/frame.css">
+    <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 </head>
 <body>
 
-<!--<div id="headerContainer"></div>-->
-<!--<div id="container">-->
-    <!--<div id="brands"></div>-->
-    <!--<div id="brandWithProducts"></div>-->
-<!--</div>-->
-<!--<div id="footerContainer"></div>-->
-
-
-
-
 <div id="mainContainer" class="container-fluid"></div>
-
 
 <script data-main="js/main" src="/js/libs/requirejs/require.js"></script>
 
