--- a/views/home.html
+++ b/views/home.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<div id="mainContainer" class="container-fluid"></div>
+<div id="mainContainer" class="container container-fluid"></div>
 
 <script data-main="js/main" src="/js/libs/requirejs/require.js"></script>
 
