--- a/public/templates/shop/hireMe.html
+++ b/public/templates/shop/hireMe.html
@@ -1,9 +1,9 @@
 <div class="col-sm-offset-4 col-md-4">
     <div id='error' class="alert alert-danger" role="alert">
-        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-        <span class="sr-only">Error:</span>
+        <span id='glif' class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
         <div id="errorMessage"></div>
     </div>
+
 
     <form id="hireForm" class="form-horizontal">
         <div id='nameDiv' class="form-group" >
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div id='emailDiv' class="form-group">
             <label for="ReplyEmail" class="col-sm-4 control-label"><h5>Reply Email:</h5></label>
 
             <div class="col-sm-8">
