add sorting to category products

--- a/public/templates/shop/category.html
+++ b/public/templates/shop/category.html
@@ -1,20 +1,20 @@
 <div class="row">
     <h3 class="inputSort">Categories </h3>
         <span class="inputSort">
-                 <input name="gender" type="radio" value="foHim" id="forHim" >For Him
+                 <input class='gender' name="gender" type="radio" value="men" >For Him
         </span >
         <span class="inputSort">
-                 <input name="gender" type="radio" value="foHer" id="forHer">For Her
+                 <input class='gender' name="gender" type="radio" value="women">For Her
         </span>
          <span class="inputSort">
              <hr class="line">
-                  <input name="category" type="radio" value="luxury" id="luxury"> luxury
+                  <input class='category' name="category" type="radio" value="luxury" id="luxury"> luxury
          </span>
          <span class="inputSort">
-                 <input name="category" type="radio" value="sport" id="sport"> sport
+                 <input class='category' name="category" type="radio" value="sport" id="sport"> sport
          </span>
          <span class="inputSort">
-                 <input name="category" type="radio" value="classic" id="classic"> classic
+                 <input class='category' name="category" type="radio" value="classic" id="classic"> classic
          </span>
 </div>
 
