--- a/public/templates/shop/banner.html
+++ b/public/templates/shop/banner.html
@@ -1,4 +1,5 @@
-<div class="col-sm-1"></div>
+<div class="col-sm-1">
+</div>
 <div class="your-class col-sm-offset-1 col-sm-10">
     <% _.forEach(collection, function(product){%>
     <% if(product.name) {%>
@@ -14,6 +15,9 @@
     <%})%>
 </div>
 
+<style>
+
+</style>
 
 <script>
         $(document).ready(function () {
