--- a/public/templates/shop/product/categoryProducts.html
+++ b/public/templates/shop/product/categoryProducts.html
@@ -1,6 +1,10 @@
+<div class="row">
+    <img  src="./images/sale-icon.png">
+</div>
 <div id='banner' class="row"></div>
 <hr class="line">
-<div class="row">
+<div id='photoCategory' class="row"></div>
+<div class="row contents">
     <div id='category' class="col-sm-2">
     </div>
     <div class="col-sm-offset-1 col-sm-9">
@@ -12,11 +16,11 @@
 </div>
 
 <style>
-    #banner{
-        margin-bottom: 50px;
-    }
     #products{
         padding-top: 70px;
+    }
+    .contents{
+        margin-top: 100px;
     }
 
 </style>
